--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ margin-left: 560px;
         margin-left: -550px;
       }
       .m4{
-        margin-left: 430px;
+        margin-left: 550px;
 
       }
         </style>
@@ -425,7 +425,7 @@ margin-left: 560px;
                             </div>
             
                             <div id="PORTFOLIO">
-                                <h1 class="text-align center text-warning"><b>PORTFOLIO</b></h1>
+                                <h1 class="text-align center text-warning"><b>&nbsp; &nbsp; PORTFOLIO</b></h1>
 
                 
 
